fixed cut off box shadows

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,12 +82,13 @@ body {
     width: 90%;
     text-align: center;
     overflow: auto;
+    padding: 0 20px 20px 20px;
 }
 
 #leftblock {
     text-align: left;
     float: left;
-    width: 45%;
+    width: 48%;
     top: 10px;
     vertical-align: top;
     min-height: 250px;
@@ -97,7 +98,7 @@ body {
     text-align: left;
     float: right;
     font-size: 1.25em;
-    width: 45%;
+    width: 48%;
     top: 10px;
     vertical-align: top;
     min-height: 250px;
